--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -18,10 +18,9 @@ on:
 
 
 env:
-  IMAGE_BASE_NAME: eurolinux/
 
-  DOCKERHUB_USER: halat
-  QUAY_USER: barnabur
+  DOCKERHUB_USER: "halat"
+  QUAY_USER: "barnabur"
 
 jobs:
 
@@ -45,10 +44,10 @@ jobs:
         run: |
           echo DISTR=$( sed -n "s/-[0-9]\.[0-9].*$//p" <<< ${{ env.TAG }}) >> $GITHUB_ENV
       
-      - name: Debug DISTR
+      - name: Debug
         run: |
-          echo ${{ env.DISTR }}
-          
+          echo ${{ env.DISTR }} ${{ env.DOCKERHUB_USER }} ${{ env.QUAY_USER }}
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
