rename dockerfile for alma
Former-commit-id: b44409a66fee4bc6b9fbcc5155e931d75eff5f50 [formerly fdd995995e1545e878d39fbea4e53b092c67331e [formerly fdd995995e1545e878d39fbea4e53b092c67331e [formerly 622b2b9611ac35f350956f1309f51720337b408f]]]
Former-commit-id: fdd995995e1545e878d39fbea4e53b092c67331e
Former-commit-id: fce705ed82a55b4e2d50bf63890134c32b2f0c05
Former-commit-id: 1c377ebbf3cb66925f27417d27c6f88dd1b232da

--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -63,8 +63,8 @@ jobs:
       - name: Build  ${{ env.DISTR }} container
         uses: docker/build-push-action@v2
         with:
-          context: ./${{ env.DIR }}
-          file: ./${{ env.DIR }}/dockerfile
+          context: ./${{ env.DISTR }}
+          file: ./${{ env.DISTR }}/Dockerfile
           no-cache: true
           push: true
           tags: |
