--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -63,8 +63,8 @@ jobs:
       - name: Build  ${{ env.DISTR }} container
         uses: docker/build-push-action@v2
         with:
-          context: ./${{ env.DISTR }}
-          file: ./${{ env.DISTR }}/Dockerfile
+          context: ./base_images/${{ env.DISTR }}
+          file: ./base_images/${{ env.DISTR }}/Dockerfile
           no-cache: true
           push: true
           tags: |
