change alma to almalinux
Former-commit-id: 0012a01089ed5fb26a078602c06ef5481ca16329 [formerly 918705efe674e02b6135fccea2bed7867a537bd0 [formerly 918705efe674e02b6135fccea2bed7867a537bd0 [formerly dd82bb4e4a938432324f3399dabe2466bf7e8175]]]
Former-commit-id: 918705efe674e02b6135fccea2bed7867a537bd0
Former-commit-id: 1960a761be748f94e95a010c55c6fe445d65d35a
Former-commit-id: 55c174559cd3d927400b1de47123d87cba12cfba

--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -13,14 +13,8 @@ on:
      - "eurolinux-8-8.*"
      - "eurolinux-7-7.*"
      - "scientific-linux-7-7.*"
-     - "alma-8-8.*"
+     - "almalinux-8-8.*"
      - "rocky-8-8.*"
-
-
-env:
-
-  DOCKERHUB_USER: "halat"
-  QUAY_USER: "barnabur"
 
 jobs:
 
@@ -50,14 +44,14 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: ${{ env.DOCKERHUB_USER }}
+          username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKER_AND_QUAY_PASS }}
 
       - name: Login to Quay
         uses: docker/login-action@v1
         with:
           registry: quay.io
-          username: ${{ env.QUAY_USER }}
+          username: ${{ secrets.QUAY_USER }}
           password: ${{ secrets.DOCKER_AND_QUAY_PASS }}
 
       - name: Build  ${{ env.DISTR }} container
